office class completed. API interaction and interface still need to be done

--- a/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine-standalone-3.8.0/SpecRunner.html
@@ -19,6 +19,7 @@
     <script src="../.../src/office.js"></script>
     <script src="../../src/room.js"></script>
     <script src="../../src/office.js"></script>
+    <script src="../../src/sms.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/SpecHelper.js"></script>
